# swagger/blog-api.yml
@@ -60,7 +60,6 @@ paths:
         content:
           application/json:
             schema:
-              type: object
               $ref: '#/components/schemas/Post'
       responses:
         204:
@@ -85,8 +84,33 @@ paths:
           content:
             application/json:
               schema:
-                type: object
                 $ref: '#/components/schemas/Post'
+        404:
+          description: 'The requested resource can not be found'
+    put:
+      summary: Edit a blog post
+      description: Edit a blog post
+      security:
+        - Bearer: []
+      parameters:
+        - $ref: '#/components/parameters/BlogID'
+        - $ref: '#/components/parameters/PostID'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+      responses:
+        200:
+          description: 'OK'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
         404:
           description: 'The requested resource can not be found'
     delete:
